<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/main_padding_20px"
    android:paddingBottom="@dimen/main_padding_10px"
    android:paddingStart="@dimen/main_padding_15px"
    android:paddingEnd="@dimen/main_padding_15px"
    tools:context="com.goldtek.httptester.MainActivity">

    <TextView
        android:id="@+id/tv_device_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edt_device_ip"
        android:text="@string/label_device_ip_address"
        android:textSize="@dimen/font_size_small"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_device_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/only_ip_address"
        android:text="@string/default_ip_address"
        android:textSize="@dimen/font_size_middle"
        android:maxLength="15"
        android:maxLines="1"
        android:inputType="text"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_device_ip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_action_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edt_action_name"
        android:text="@string/label_action_location"
        android:textSize="@dimen/font_size_small"
        android:layout_marginTop="@dimen/main_padding_5px"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_device_ip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_action_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_action_testing"
        android:textSize="@dimen/font_size_middle"
        android:maxLines="1"
        android:inputType="text"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_action_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_params_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edt_params_name"
        android:text="@string/label_parameter_name"
        android:textSize="@dimen/font_size_small"
        android:layout_marginTop="@dimen/main_padding_5px"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_action_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- <TextView
        android:id="@+id/tv_notice_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edt_params_name"
        android:text="@string/notice_params_use_comma"
        android:textColor="@color/errorRed"
        android:textSize="@dimen/font_size_extra_small"
        android:layout_marginTop="@dimen/main_padding_5px"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toEndOf="@id/tv_params_name"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_params_name"/> -->

    <EditText
        android:id="@+id/edt_params_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text"
        android:text="@string/default_parameter_name"
        android:textSize="@dimen/font_size_middle"
        android:maxLines="1"
        android:inputType="text"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_params_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_params_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edt_params_value"
        android:text="@string/label_parameter_value"
        android:textSize="@dimen/font_size_small"
        android:layout_marginTop="@dimen/main_padding_5px"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_params_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- <TextView
        android:id="@+id/tv_notice_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edt_params_name"
        android:text="@string/notice_values_use_comma"
        android:textColor="@color/errorRed"
        android:textSize="@dimen/font_size_extra_small"
        android:layout_marginTop="@dimen/main_padding_5px"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toEndOf="@id/tv_params_value"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_params_value"/> -->

    <EditText
        android:id="@+id/edt_params_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text"
        android:text="@string/default_parameter_value"
        android:textSize="@dimen/font_size_middle"
        android:maxLength="15"
        android:maxLines="1"
        android:inputType="text"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_params_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/rbt_group_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/main_margin_20px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_params_value">

        <RadioButton
            android:id="@+id/rbt_get"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_send_by_get"
            android:textSize="@dimen/font_size_middle"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbt_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_send_by_post"
            android:textSize="@dimen/font_size_middle"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_response_result"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:textSize="@dimen/font_size_small"
        android:layout_marginTop="@dimen/main_margin_10px"
        android:scrollbars="vertical"
        android:focusableInTouchMode="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbt_group_method"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_send"
        android:textSize="@dimen/font_size_middle"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
